<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HealthTips</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bmical_string">Body Mass Index</string>
    <string name="heartrat_string">Heart Rate </string>
    <string name="default_text">--</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="submit_button">Submit</string>
    <string name="height_Textview">Height (inch)</string>
    <string name="weight_textview">Weight (KG)</string>
    <string name="category_textview">Category :</string>
    <string name="treatement_button">More Tips</string>
    <string name="Treatement_textview">Treatement :</string>
    <string name="headingtext">Advised By --\nSyed Tauhid Zuhori\nAssistant Professor,\n
Dept. of CSE,RUET\n\n\n\nDeveloped By --\nRakib Hasan\nDept. of CSE,RUET
        </string>
         <string name="helpstring">In heart Rate measurement,Its Important that you use this app in well lit conditions if the LED flash did not turn on</string>
      <string name="helpstring1">place the tip of your index fingure gently on the camera lens-do not press to hard as this can stop the blood flow on the surface of your fingure. Hold it steady for at least 10 Second your heart rate will be shown.</string>  
          
</resources>
