<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="80dp"
    tools:context="com.ruet.healthtips.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/button_bmi"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_green"
        android:text="@string/bmical_string" />

   <Button
       android:id="@+id/button_heartrate"
       style="@style/ButtonText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/button_bmi"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="80dp"
       android:background="@drawable/btn_green"
       android:text="@string/heartrat_string" />

   <Button
       android:id="@+id/Button_help"
       style="@style/ButtonText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/button_heartrate"
       android:layout_marginTop="17dp"
       android:background="@drawable/btn_green"
       android:text="@string/help" />

   <Button
       android:id="@+id/Button_about"
       style="@style/ButtonText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/Button_help"
       android:layout_marginTop="14dp"
       android:background="@drawable/btn_green"
       android:text="@string/about" />

</RelativeLayout>