<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.health.bmi.MainActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <TextView
        android:id="@+id/Textview_Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/category_textview"
        android:textSize="@dimen/category" />

    <TextView
        android:id="@+id/TextView_Treatement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Textview_Category"
        android:layout_marginTop="14dp"
        android:text="@string/Treatement_textview"
        android:textSize="@dimen/category" />

    <Button
        android:id="@+id/btnTreatement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView_Treatement"
        android:layout_marginTop="34dp"
        android:text="@string/treatement_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnTreatement"
        android:layout_marginTop="26dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="10"
            android:textSize="@dimen/category" />
    </LinearLayout>
            
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>